[gd_scene load_steps=38 format=3 uid="uid://c1k1lgmr4xtab"]

[ext_resource type="FontFile" uid="uid://bkrqg3u6n5dvr" path="res://assets/fonts/picotron.ttf" id="1"]
[ext_resource type="Script" uid="uid://cfh6svhfx0msm" path="res://debug_buglist.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dir68231l032" path="res://assets/images/rect.png" id="3"]
[ext_resource type="Script" uid="uid://btthb0jt17ilv" path="res://tab.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://dv1888plvrayg" path="res://assets/images/cross.png" id="5"]
[ext_resource type="AudioStream" uid="uid://cnxq4y7paottp" path="res://assets/sound/click_light.wav" id="6"]
[ext_resource type="Texture2D" uid="uid://ci4a2dgia7hk7" path="res://assets/images/bold_circular_gauge.png" id="7"]

[sub_resource type="StyleBoxFlat" id="19"]

[sub_resource type="StyleBoxFlat" id="20"]
bg_color = Color(0.835294, 0.835294, 0.835294, 1)

[sub_resource type="StyleBoxFlat" id="21"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxLine" id="22"]
thickness = 6

[sub_resource type="StyleBoxFlat" id="23"]

[sub_resource type="FontFile" id="17"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="10"]
content_margin_left = 5.0
bg_color = Color(0, 0, 0, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0
shadow_color = Color(0, 0, 0, 0)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="3"]
content_margin_left = 5.0
bg_color = Color(0, 0, 0, 0.588235)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="35"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="4"]

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.835294, 0.835294, 0.835294, 1)

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxLine" id="7"]
content_margin_left = 3.0
content_margin_top = 3.0
content_margin_right = 3.0
content_margin_bottom = 3.0
grow_begin = 4.0
grow_end = 4.0
thickness = 4
vertical = true

[sub_resource type="StyleBoxFlat" id="8"]

[sub_resource type="Theme" id="9"]
HScrollBar/styles/grabber = SubResource("19")
HScrollBar/styles/grabber_highlight = SubResource("20")
HScrollBar/styles/grabber_pressed = SubResource("21")
HScrollBar/styles/scroll = SubResource("22")
HScrollBar/styles/scroll_focus = SubResource("23")
PopupMenu/colors/font_color = Color(0.88, 0.88, 0.88, 1)
PopupMenu/colors/font_color_accel = Color(0.7, 0.7, 0.7, 0.8)
PopupMenu/colors/font_color_disabled = Color(0.4, 0.4, 0.4, 0.8)
PopupMenu/colors/font_color_hover = Color(0, 0, 0, 1)
PopupMenu/colors/font_color_separator = Color(1, 1, 1, 1)
PopupMenu/fonts/font = SubResource("17")
PopupMenu/icons/checked = null
PopupMenu/styles/hover = null
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = null
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
TextEdit/colors/background_color = Color(0, 0, 0, 0.145098)
TextEdit/colors/caret_background_color = Color(0, 0, 0, 1)
TextEdit/colors/code_folding_color = Color(0.8, 0.8, 0.8, 0.8)
TextEdit/colors/completion_background_color = Color(0.17, 0.16, 0.2, 1)
TextEdit/colors/completion_font_color = Color(0.67, 0.67, 0.67, 1)
TextEdit/colors/current_line_color = Color(0, 0, 0, 1)
TextEdit/colors/font_color = Color(1, 1, 1, 1)
TextEdit/colors/font_color_readonly = Color(0.811765, 0.827451, 0.854902, 1)
TextEdit/colors/font_color_selected = Color(0, 0, 0, 1)
TextEdit/colors/selection_color = Color(0.101961, 0.129412, 0.572549, 1)
TextEdit/colors/word_highlighted_color = Color(0, 0, 0, 1)
TextEdit/fonts/font = SubResource("2")
TextEdit/icons/fold = null
TextEdit/icons/folded = null
TextEdit/icons/tab = null
TextEdit/styles/focus = SubResource("10")
TextEdit/styles/normal = SubResource("3")
TextEdit/styles/read_only = SubResource("35")
VScrollBar/styles/grabber = SubResource("4")
VScrollBar/styles/grabber_highlight = SubResource("5")
VScrollBar/styles/grabber_pressed = SubResource("6")
VScrollBar/styles/scroll = SubResource("7")
VScrollBar/styles/scroll_focus = SubResource("8")

[sub_resource type="CanvasItemMaterial" id="33"]
blend_mode = 2

[sub_resource type="StyleBoxFlat" id="25"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="24"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="26"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="FontFile" id="11"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="30"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="15"]

[sub_resource type="StyleBoxFlat" id="12"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="13"]
bg_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="16"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
anti_aliasing = false

[sub_resource type="FontFile" id="32"]
fallbacks = Array[Font]([ExtResource("1")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="StyleBoxFlat" id="29"]
bg_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="31"]
bg_color = Color(0, 0, 0, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 0)
anti_aliasing = false

[sub_resource type="FontFile" id="34"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[node name="buglist" type="CanvasLayer"]
process_mode = 3
layer = 128
script = ExtResource("2")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 745.0
offset_bottom = 500.0

[node name="NinePatchRect" type="NinePatchRect" parent="Control"]
layout_mode = 0
offset_left = 2.0
offset_top = 23.0
offset_right = 480.0
offset_bottom = 326.0
texture = ExtResource("3")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="ColorRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = 74.0
offset_top = 31.0
offset_right = 566.0
offset_bottom = 341.0

[node name="ColorRect2" type="ColorRect" parent="Control"]
visible = false
layout_mode = 0
offset_left = 75.0
offset_top = 32.0
offset_right = 565.0
offset_bottom = 340.0
color = Color(0, 0, 0, 1)

[node name="TextEdit" type="TextEdit" parent="Control"]
layout_mode = 0
offset_left = 3.0
offset_top = 24.0
offset_right = 479.0
offset_bottom = 324.0
focus_mode = 1
mouse_filter = 1
theme = SubResource("9")
caret_blink = true
caret_blink_interval = 0.3
caret_move_on_right_click = false
highlight_current_line = true

[node name="tab" type="Control" parent="Control"]
clip_contents = true
anchors_preset = 0
offset_left = 3.0
offset_top = -8.0
offset_right = 437.0
offset_bottom = 24.0

[node name="add_tab" type="Sprite2D" parent="Control/tab"]
position = Vector2(49, 24)
scale = Vector2(0.5, 0.5)
texture = ExtResource("5")

[node name="tab" type="Node2D" parent="Control/tab"]
position = Vector2(20, 25)
script = ExtResource("4")

[node name="ColorRect2" type="ColorRect" parent="Control/tab/tab"]
offset_left = 1.0
offset_top = -9.0
offset_right = 19.0
offset_bottom = 21.0
color = Color(0, 0, 0, 0.392157)

[node name="ColorRect" type="NinePatchRect" parent="Control/tab/tab"]
clip_contents = true
offset_top = -10.0
offset_right = 20.0
offset_bottom = 16.0
texture = ExtResource("3")
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 1

[node name="ColorRect3" type="ColorRect" parent="Control/tab/tab/ColorRect"]
show_behind_parent = true
material = SubResource("33")
layout_mode = 0
offset_left = 1.0
offset_top = 20.0
offset_right = 19.0
offset_bottom = 30.0

[node name="ColorRect4" type="ColorRect" parent="Control/tab/tab/ColorRect"]
show_behind_parent = true
layout_mode = 0
offset_left = 1.0
offset_top = 20.0
offset_right = 324.0
offset_bottom = 30.0
color = Color(0, 0, 0, 0.392157)

[node name="Label" type="LineEdit" parent="Control/tab/tab"]
clip_contents = true
offset_left = 7.0
offset_top = -4.0
offset_right = 127.0
offset_bottom = 4.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("25")
theme_override_styles/read_only = SubResource("24")
theme_override_styles/normal = SubResource("26")
text = "1"
expand_to_text_length = true
context_menu_enabled = false
caret_blink = true
caret_blink_interval = 0.2

[node name="next" type="Marker2D" parent="Control/tab/tab/Label"]

[node name="Marker2D" type="Marker2D" parent="Control/tab"]
position = Vector2(20, 25)

[node name="tab_container" type="Control" parent="Control/tab"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = 13.0
offset_top = 18.0
offset_right = 35.0
offset_bottom = 40.0
pivot_offset = Vector2(7, -1)
mouse_filter = 2
step = 0.01
value = 55.0
fill_mode = 5
texture_under = ExtResource("7")
texture_progress = ExtResource("7")
tint_under = Color(0, 0, 0, 1)

[node name="ExitButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 454.0
offset_top = 11.0
offset_right = 479.0
offset_bottom = 23.0
size_flags_horizontal = 0
size_flags_vertical = 0
focus_mode = 1
mouse_filter = 1
theme_override_constants/h_separation = 4545
theme_override_fonts/font = SubResource("11")
theme_override_styles/focus = SubResource("30")
theme_override_styles/disabled = SubResource("15")
theme_override_styles/hover = SubResource("12")
theme_override_styles/pressed = SubResource("13")
theme_override_styles/normal = SubResource("16")
text = "X"
clip_text = true
icon_alignment = 1

[node name="MinimizeButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 436.0
offset_top = 12.0
offset_right = 453.0
offset_bottom = 22.0
size_flags_horizontal = 0
size_flags_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/h_separation = 4545
theme_override_fonts/font = SubResource("32")
theme_override_styles/focus = SubResource("29")
theme_override_styles/disabled = SubResource("15")
theme_override_styles/hover = SubResource("12")
theme_override_styles/pressed = SubResource("13")
theme_override_styles/normal = SubResource("31")
text = "-"
clip_text = true
icon_alignment = 1

[node name="typing_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
volume_db = -1.0
pitch_scale = 3.0

[node name="typing_noise2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6")
pitch_scale = 6.0

[node name="title" type="RichTextLabel" parent="."]
visible = false
offset_left = -1043.0
offset_right = -386.0
offset_bottom = 488.0
theme_override_fonts/normal_font = SubResource("34")
text = "
                            -- the little note taking app! --


								 _._     _,-'\"\"`-._
								(,-.`._,'(       |\\`-/|
								    `-.-' \\ )-`( , o o)
								          `-    \\`_`\"'-
															    /\\_/\\           ___
															   = o_o =_______    \\ \\ 
															    __^      __(  \\.__) )
															(@)<_____>__(_____)____/
	           \\    /\\
			    )  ( ')
			    (  /  )
			    \\(__)|"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 30.0
autostart = true

[connection signal="focus_entered" from="Control/TextEdit" to="." method="_on_TextEdit_focus_entered"]
[connection signal="focus_exited" from="Control/TextEdit" to="." method="_on_TextEdit_focus_exited"]
[connection signal="text_changed" from="Control/tab/tab/Label" to="." method="_on_Label_text_changed"]
[connection signal="text_submitted" from="Control/tab/tab/Label" to="." method="_on_Label_text_entered"]
